[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rclonecli"
dynamic = ["version"]
dependencies = [
    "docopt>=0.6.2"
]
description = "A CLI Interface for rclone"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/Desperationis/rcli"
Issues = "https://github.com/Desperationis/rcli/issues"

[project.scripts]
rcli = "rcli:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.dynamic]
version = {attr = "rcli.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
